--- a/index.html
+++ b/index.html
@@ -26,6 +26,8 @@
 
             <p id="docs"></p>
             <p id="name"></p>
+
+            <img id="image">
         </div>
     </body>
 </html>
